# BedrockDownloader

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
docs/: MECHANISM.md
scripts/: dev.mjs  fetch-uwp-dates.mjs
src/: App.tsx  api.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: download.rs  extract.rs  fe3.rs  lib.rs  main.rs  paths.rs  uwp_dates.json  versiondb.rs
src/components/: ContextMenu.tsx  DownloadTray.tsx  MirrorModal.tsx
